k8s/infra/whoisd/app/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoisd
spec:
  replicas: 1
  template:
    spec:
      securityContext:
        runAsUser: 3856
        runAsGroup: 3856
        fsGroup: 3856
      containers:
        - name: whoisd
          image: ghcr.io/lamacorp/whoisd
          imagePullPolicy: IfNotPresent
          ports:
            - name: whois
              containerPort: 1043
              protocol: TCP
