k8s/infra/whoisd/app/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: whois
  annotations:
    io.cilium/lb-ipam-ips: 209.112.97.42,2001:67c:17fc::43
    external-dns.kubernetes.io/hostname: whois.as212024.net
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: whois
      port: 43
      targetPort: whois
      protocol: TCP
